test/errors/undefined-symbol/undefined-symbol.rom
Error in `undefined-symbol.asm` on line 1: Symbol `test` was not defined
